--- a/app/src/main/res/layout/item_song_edit.xml
+++ b/app/src/main/res/layout/item_song_edit.xml
@@ -11,7 +11,7 @@
         android:id="@+id/iv_edit_del"
         style="@style/StyleListRightItem"
         android:layout_marginEnd="8dp"
-        android:src="@android:drawable/ic_delete"
+        android:src="@drawable/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
